--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.0",
+    "react-router-dom": "^4.4.0-alpha.0",
     "react-script": "^2.0.5",
     "react-scripts": "1.1.4",
     "reactstrap": "^6.1.0",
