--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "reactstrap": "^6.1.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "redux-storage": "^4.1.2",
     "redux-thunk": "^2.3.0"
   },
