--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
+    "react-dropdown": "^1.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.4.0-alpha.0",
