Search form almost done

--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "jsonwebtoken": "^8.2.2",
+    "rc-datepicker": "^5.0.13",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
+    "react-bootstrap-date-picker": "^5.1.0",
+    "react-datepicker": "^1.5.0",
+    "react-dates": "^16.7.0",
     "react-dom": "^16.4.0",
     "react-dropdown": "^1.5.0",
     "react-redux": "^5.0.7",
