--- a/package.json
+++ b/package.json
@@ -7,13 +7,15 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.1.1",
     "jsonwebtoken": "^8.2.2",
+    "moment": "^2.22.2",
     "rc-datepicker": "^5.0.13",
-    "react": "^16.4.0",
+    "react": "^16.4.1",
+    "react-addons-shallow-compare": "^15.6.2",
     "react-bootstrap": "^0.32.1",
     "react-bootstrap-date-picker": "^5.1.0",
     "react-datepicker": "^1.5.0",
     "react-dates": "^16.7.0",
-    "react-dom": "^16.4.0",
+    "react-dom": "^16.4.1",
     "react-dropdown": "^1.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
